# sra-app

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  testing.py
Scripts/: debug_surface_fit.py
autoencoder/: autoencoder.py  functions.py
docs/: app.html  autoencoder.html  filtering.html  index.html  main.html  measurements.html  pipeline.html  search.js  sra.html  tools.html
docs/autoencoder/: autoencoder.html  functions.html
docs/filtering/: tools.html
docs/measurements/: pvpm.html  sma.html
docs/pipeline/: functions.html  pipe.html  steps.html
docs/sra/: current.html  irradiance.html  power.html  temperature.html
docs/tools/: forecast.html  helper.html
filtering/: tools.py
measurements/: pvpm.py  sma.py
pages/: analysis.py  autoencoder.py  betriebsbedingungen.py  filtering.py  forecast.py  interactive_plotting.py  messkampagne.py  new_project.py  open_project.py  project_overview.py  pvpm.py  sma.py  test.py  welcome.py
pipeline/: functions.py  pipe.py  steps.py
sra/: current.py  irradiance.py  power.py  temperature.py
template/: index.html.jinja2
tools/: forecast.py  helper.py
